C1: Illegal bci in debug info for MH::linkTo* methods

XMLWordPrintable

    • Type: Bug
    • Resolution: Fixed
    • Priority: P4
    • 9
    • Affects Version/s: 9
    • Component/s: hotspot
    • b112

      (C:\jprt\T\P1\130437.magnusi\s\hotspot\src\share\vm\oops\method.cpp:674), pid=146588, tid=55964
      # assert(bci == 0 || 0 <= bci && bci < code_size()) failed: illegal bci
      #
      # JRE version: Java(TM) SE Runtime Environment (9.0) (fastdebug build 9-internal+0-2016-02-19-130437.magnusi.jdk9-hs-rt)
      # Java VM: Java HotSpot(TM) 64-Bit Server VM (fastdebug 9-internal+0-2016-02-19-130437.magnusi.jdk9-hs-rt, mixed mode, tiered, compressed oops, g1 gc, windows-amd64)

      --------------- S U M M A R Y ------------

      Command Line: -Xmixed -XX:MaxRAMFraction=8 -XX:+CreateCoredumpOnCrash -XX:ReservedCodeCacheSize=256M -XX:+UnlockCommercialFeatures -XX:+FlightRecorder -XX:FlightRecorderOptions=defaultrecording=true,disk=true,dumponexit=true -agentlib:stressRedefine nsk.jvmti.RedefineClasses.StressRedefine C:/local/aurora/CommonData/TESTBASE/bin -corruptingBytecodeProbability 0.0

      --------------- T H R E A D ---------------

      Current thread (0x000000affa310000): WatcherThread [stack: 0x000000afffb70000,0x000000afffc70000] [id=55964]

      Stack: [0x000000afffb70000,0x000000afffc70000]
      Native frames: (J=compiled Java code, j=interpreted, Vv=VM code, C=native code)
      V [jvm.dll+0x905270] os::platform_print_native_stack+0x100;; ?platform_print_native_stack@os@@SA_NPEAVoutputStream@@PEBXPEADH@Z+0x100
      V [jvm.dll+0xaaee6f] VMError::report+0xabf;; ?report@VMError@@CAXPEAVoutputStream@@_N@Z+0xabf
      V [jvm.dll+0xaafd3b] VMError::report_and_die+0x43b;; ?report_and_die@VMError@@SAXHPEBD0PEADPEAVThread@@PEAEPEAX40H_K@Z+0x43b
      V [jvm.dll+0xab033d] VMError::report_and_die+0x5d;; ?report_and_die@VMError@@SAXPEAVThread@@PEBDH11PEAD@Z+0x5d
      V [jvm.dll+0x468658] report_vm_error+0x78;; ?report_vm_error@@YAXPEBDH00ZZ+0x78
      V [jvm.dll+0x89c8d9] Method::line_number_from_bci+0x69;; ?line_number_from_bci@Method@@QEBAHH@Z+0x69
      V [jvm.dll+0x66184e] JfrStackTrace::record+0x19e;; ?record@JfrStackTrace@@QEAA_NAEAVJavaThread@@AEAVframe@@@Z+0x19e
      V [jvm.dll+0x65fd0e] OSThreadSampler::protected_task+0xde;; ?protected_task@OSThreadSampler@@QEAAXAEBVSuspendedThreadTaskContext@os@@@Z+0xde
      V [jvm.dll+0x900518] os::SuspendedThreadTask::internal_do_task+0x98;; ?internal_do_task@SuspendedThreadTask@os@@AEAAXXZ+0x98
      V [jvm.dll+0x8f7198] os::SuspendedThreadTask::run+0x58;; ?run@SuspendedThreadTask@os@@QEAAXXZ+0x58
      V [jvm.dll+0x65fde3] ThreadSampleClosure::sample_thread+0x73;; ?sample_thread@ThreadSampleClosure@@AEAA_NPEAVJavaThread@@QEAVJfrStackFrame@@I@Z+0x73
      V [jvm.dll+0x66034f] ThreadSampler::task+0x44f;; ?task@ThreadSampler@@UEAAXXZ+0x44f
      V [jvm.dll+0xa392ae] PeriodicTask::real_time_tick+0x14e;; ?real_time_tick@PeriodicTask@@CAXH@Z+0x14e
      V [jvm.dll+0xa635fe] WatcherThread::run+0x14e;; ?run@WatcherThread@@UEAAXXZ+0x14e
      V [jvm.dll+0x900ad6] java_start+0xe6;; ?java_start@@YAIPEAVThread@@@Z+0xe6
      C [msvcr120.dll+0x24f7f]
      C [msvcr120.dll+0x25126]
      C [KERNEL32.DLL+0x13d2]
      C [ntdll.dll+0x15454]

            Assignee:
            Vladimir Ivanov
            Reporter:
            Ioi Lam
            Votes:
            0 Vote for this issue
            Watchers:
            8 Start watching this issue

              Created:
              Updated:
              Resolved: