8150320: C1: Illegal bci in debug info for MH::linkTo* methods

Reviewed-by: kvn, dlong